# vinput

./: .SRCINFO  .gitignore  FINDINGS.md  LICENSE  PKGBUILD  PKGBUILD.install  README.md  meson.build  meson_options.txt
ASR_provider/: README.md  WhyThisArchWork.md
ASR_provider/src/: asr_provider.cpp  asr_provider.h  audio_capture.cpp  audio_capture.h  buffer_detect.cpp  buffer_detect.h  doubao_provider.cpp  doubao_provider.h  fire_red_provider.cpp  fire_red_provider.h  meson.build  mock_provider.cpp  mock_provider.h  qwen3_provider.cpp  qwen3_provider.h  qwen_provider.cpp  qwen_provider.h  sense_voice_provider.cpp  sense_voice_provider.h  service_helper.h  vinput_config.h  ws_client.h  zipformer_provider.cpp  zipformer_provider.h
adapter/: WhyThisArchWork.md  meson.build
adapter/src/: desktop_strategy.cpp  desktop_strategy.h  meson.build  output_handler.cpp  output_handler.h  vinput-addon.conf.in  vinput.cpp
config/: README.md  advanced.json  advanced.json.example  audio.json.example  doubao.json.example  output.json.example  qwen.json.example  vinput.json.example
docs/: 00-overview.md  02-developing-addon.md  05-voice-input-design.md  doubao-auc-api.md  find.md  qwen-asr-api.md  vinput.1
docs/fcitx5/: 01-addon-system.md  03-configuration.md  04-debugging.md
docs/vinput/: 05-voice-input-design.md  06-asr-provider-api.md  07-fireredasr2-llm.md  08-qwen3-asr-vllm.md
scripts/: df_denoise.py  doubao_asr.py  test_ws_server.py
systemd/: vinput-sherpa-fire-red.service  vinput-sherpa-zipformer.service  vllm-qwen3.service
tests/: README.md  meson.build  test_asr_registry.cpp  test_audio_capture_file.cpp  test_buffer_detect_cache.cpp  test_config_fallback.cpp
tools/: README.md  calibrate_silence.cpp  meson.build  record_test.cpp  record_timing.cpp  tail_loss_test.cpp  test_audio_file.cpp  test_audio_pipeline.cpp  test_uinput_caps.cpp
