test_asr_registry = executable('test_asr_registry',
  'test_asr_registry.cpp',
  dependencies: [asr_provider_dep])

test_audio_capture_file = executable('test_audio_capture_file',
  'test_audio_capture_file.cpp',
  dependencies: [asr_provider_dep])

test_buffer_detect_cache = executable('test_buffer_detect_cache',
  'test_buffer_detect_cache.cpp',
  dependencies: [asr_provider_dep])

test('asr_registry', test_asr_registry)
test('audio_capture_file', test_audio_capture_file)
test('buffer_detect_cache', test_buffer_detect_cache)
